--- a/IncidentTableView/Base.lproj/Main.storyboard
+++ b/IncidentTableView/Base.lproj/Main.storyboard
@@ -148,11 +148,11 @@
             <objects>
                 <viewController id="77x-nQ-Uet" customClass="ViewController2" customModule="IncidentTableView" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="D4D-av-m51">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="716"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="70" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="0bl-g2-ElW">
-                                <rect key="frame" x="0.0" y="70" width="414" height="646"/>
+                                <rect key="frame" x="0.0" y="70" width="414" height="617"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <color key="separatorColor" red="0.1983621716" green="0.24874830249999999" blue="0.34903240200000002" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <color key="sectionIndexBackgroundColor" red="0.1983621716" green="0.24874830249999999" blue="0.34903240200000002" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
@@ -541,8 +541,9 @@
                         <outlet property="firstFloorImage" destination="EAe-lP-JAT" id="WON-6J-aR3"/>
                         <outlet property="mainGymBtn" destination="1c0-of-DKh" id="peW-dz-BES"/>
                         <segue destination="l1B-HE-OFo" kind="show" identifier="toVC4fromVC5" id="3BB-mB-DDe"/>
-                        <segue destination="77x-nQ-Uet" kind="show" identifier="homeAfterSubmit" id="REJ-wP-cIt"/>
-                        <segue destination="MPf-nQ-aSd" kind="unwind" identifier="unwindVC4" unwindAction="unwindVC4:" id="9jB-9Y-AGO"/>
+                        <segue destination="MPf-nQ-aSd" kind="unwind" identifier="unwindVC4" unwindAction="unwindVC4:" id="tND-vN-pqA"/>
+                        <segue destination="MPf-nQ-aSd" kind="unwind" identifier="unwindVC3" unwindAction="unwindVC3:" id="2aR-lH-SQl"/>
+                        <segue destination="MPf-nQ-aSd" kind="unwind" identifier="unwindVC2" unwindAction="unwindVC2:" id="dPK-zU-Cx7"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="8Gt-84-xw3" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -783,8 +784,8 @@
     </scenes>
     <inferredMetricsTieBreakers>
         <segue reference="o83-0q-Bkx"/>
-        <segue reference="dla-1J-ZEe"/>
-        <segue reference="2Hi-lu-GmA"/>
+        <segue reference="3BB-mB-DDe"/>
+        <segue reference="cXq-8U-SwE"/>
     </inferredMetricsTieBreakers>
     <resources>
         <image name="Floor1" width="718" height="1142"/>
